--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "amazon-selling-partner-js-api",
   "type": "module",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "The NPM package name should always start with `@amzn/` to cleanly separate from public packages, avoid accidental publish to public repository, and allow publishing to CodeArtifact.",
   "main": "/src/index.mjs",
   "scripts": {
@@ -13,6 +13,8 @@
     "superagent": "^8.0.9"
   },
   "devDependencies": {
+    "grunt-bump": "^0.8.0",
+    "grunt-contrib-uglify": "^5.2.2",
     "jest": "^29.6.2"
   },
   "files": [
