--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "amazon-selling-partner-js-api",
+  "name": "@cshah18/amazon-selling-partner-js-api",
   "type": "module",
   "version": "1.0.2",
   "description": "The NPM package name should always start with `@amzn/` to cleanly separate from public packages, avoid accidental publish to public repository, and allow publishing to CodeArtifact.",
   "main": "/src/index.mjs",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config test_for_generated_sdk/jest.config.json"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CShah18/amazon-selling-partner-js-api.git"
   },
   "author": "",
   "license": "ISC",
